[gd_scene load_steps=13 format=3 uid="uid://cgt5qgbjcmmwt"]

[ext_resource type="Script" path="res://Scripts/paused_menu_w3.gd" id="1_y4fgy"]
[ext_resource type="Texture2D" uid="uid://bg0eeyigtw0l4" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/menu_bg.png" id="2_wmqkc"]
[ext_resource type="Texture2D" uid="uid://jnpcwkugfoo1" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/gamepause.png" id="3_vm0fj"]
[ext_resource type="Texture2D" uid="uid://fhhf7b0fis4r" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/spaceship.png" id="4_s8yby"]
[ext_resource type="Texture2D" uid="uid://klplgousqsby" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/real-Slime1.png" id="5_28yws"]
[ext_resource type="Texture2D" uid="uid://yvqoqd7e5n54" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/icon_holder.png" id="6_wp226"]
[ext_resource type="Texture2D" uid="uid://dk5jyx3pvye2o" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/home_button.png" id="7_f78wq"]
[ext_resource type="Texture2D" uid="uid://divuqbrp4awkv" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/home_button_75.png" id="8_o5fnp"]
[ext_resource type="Texture2D" uid="uid://rpw77u45olht" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/restart_button.png" id="9_g6eet"]
[ext_resource type="Texture2D" uid="uid://dag8hg0rvi0s4" path="res://Galactic Arithmetic Assets/level_complete_asset/RESTART_BUTTON_75.png" id="10_ly81j"]
[ext_resource type="Texture2D" uid="uid://bwynkti5fga71" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/resume_button.png" id="11_r6842"]
[ext_resource type="Texture2D" uid="uid://cbeyt6esfq7s8" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/resume_button_75.png" id="12_2exh3"]

[node name="game_paused" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4fgy")

[node name="ingame_menu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="TextureRect" parent="ingame_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -250.0
offset_right = 375.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wmqkc")
expand_mode = 1

[node name="game_paused_text" type="TextureRect" parent="ingame_menu/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -316.875
offset_right = 300.0
offset_bottom = -166.873
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vm0fj")
expand_mode = 1

[node name="spaceship" type="TextureRect" parent="ingame_menu/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -525.0
offset_top = -250.0
offset_right = -275.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_s8yby")
expand_mode = 1

[node name="slimey" type="TextureRect" parent="ingame_menu/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 275.0
offset_top = 150.0
offset_right = 475.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_28yws")
expand_mode = 1

[node name="icon_button_holder" type="TextureRect" parent="ingame_menu/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = 125.0
offset_right = 275.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_wp226")
expand_mode = 1

[node name="home_button" type="TextureButton" parent="ingame_menu/bg/icon_button_holder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -37.5
offset_right = -140.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_f78wq")
texture_pressed = ExtResource("8_o5fnp")
ignore_texture_size = true
stretch_mode = 0

[node name="restart_button" type="TextureButton" parent="ingame_menu/bg/icon_button_holder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -37.5
offset_right = 37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("9_g6eet")
texture_pressed = ExtResource("10_ly81j")
ignore_texture_size = true
stretch_mode = 0

[node name="resume_button" type="TextureButton" parent="ingame_menu/bg/icon_button_holder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 145.0
offset_top = -37.5
offset_right = 220.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("11_r6842")
texture_pressed = ExtResource("12_2exh3")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="ingame_menu/bg/icon_button_holder/home_button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="ingame_menu/bg/icon_button_holder/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ingame_menu/bg/icon_button_holder/resume_button" to="." method="_on_resume_button_pressed"]
